fix toast z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -541,3 +541,6 @@ select optgroup {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255,255,255,1.0)'/></svg>");
 }
 
+.hide{
+    z-index: -9999;
+}
